--- a/main server/Cargo.toml
+++ b/main server/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.2"
+reqwest = "0.9.22"
+serde = "1.0.102"
+serde_derive = "1.0.102"
+serde_json = "1.0.41"
