--- a/main server/Cargo.toml
+++ b/main server/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.41"
 mysql = "*"
 rand = "*"
 bcrypt = "*"
+lazy_static = "1.4.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
